<resources>
    <string name="add_filter">Add Filter</string>
    <string name="add_action">Add Action</string>
    <string name="create_rule">Create Rule</string>
    <string name="view_rules">View Rules</string>
    <string name="on_off">On/Off</string>
    <string name="welcome">Welcome to LibreTasks</string>
    <string name="disclaimer_title">LibreTasks Disclaimer</string>
    <string name="disclaimer_msg">&lt;b&gt;This software is potentially damaging&lt;/b&gt; and is provided &quot;AS IS&quot; and without any expressed or implied warranties.  In no event shall the copyright owner or contributors be liable for any damages as a result of this software.  By using this software you agree to these terms.</string>
    <string name="select_data_from_list">Either, select the data already provided by the event application:</string>
    <string name="name_to_save">Enter a name to remember me by</string>
    <string name="save_response">Save data to pass using the OmniHandler</string>
    <string name="name_omnihandler">Name this OmniHandler</string>
    <string name="enter_data">Enter the data to be inserted</string>
    <string name="save_as">Save as</string>
    <string name="save_dialog">Enter a name to remember this OmniHandler by</string>
    <string name="manual_entry">Or, enter data manually:</string>
    <string name="enter_rule_name">Enter a rule name below:</string>
    <string name="enter_rule_description">Enter a rule description below:</string>
    <string name="actions">actions</string>
    <string name="libretasks_is_disabled">LibreTasks has been disabled.</string>
    <string name="libretasks">LibreTasks</string>
    <string name="about">About</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="agree">I Agree</string>
    <string name="disagree">I Disagree</string>
    <string name="info">Info</string>
    <string name="view">View</string>
    <string name="event_attributes">Attributes</string>
    <string name="yes">Yes</string>
    <string name="sorry">Sorry</string>
    <string name="no">No</string>
    <string name="coming_soon">We hope to implement this soon.</string>
    <string name="unknown">unknown</string>
    <string name="gmail">Gmail</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="missing_action">At least one action must be added.</string>
    <string name="missing_data">Data field can not be empty.</string>
    <string name="missing_name">OmniHandler name can not be empty.</string>
    <string name="bad_input">There was an error creating your action, check your input and try again.</string>
    <string name="select_input">Please select an input to use parameters.</string>
    <string name="error_was">The error was:</string>
    <string name="oh_no">Oh no!</string>
    <string name="throttle_alert_title">LibreTasks Temporarily Disabled</string>
    <string name="throttle_alert_msg">LibreTasks exceeded throttle limit of %1$d by processing %2$d events in the last minute.\LibreTasks will not process any more events until it is under the limit.\nThis may be caused by a looping rule.  Please see the Logs for more information.\n"</string>
    <string name="confirm_item_delete">Are you sure you want to delete this item?</string>
    <string name="confirm_rule_delete">Are you sure you want to delete this rule?</string>
    <string name="enable_msg">Enabling LibreTasks</string>
    <string name="disable_msg">Disabling LibreTasks</string>
    <string name="save_rule">Save Rule</string>
    <string name="rule_saved">Rule saved successfully.</string>
    <string name="libretasks_is_disabled_alert">LibreTasks is disabled.  Enable it for rules to take effect.</string>
    <string name="help_title">LibreTasks Help</string>
    <string name="help_activitymain">LibreTasks allows you to create rules that process events that occur on your Android device and automatically take action as a result.&lt;br /&gt;&lt;br /&gt;Select the &lt;i&gt;Create Rule&lt;/i&gt; button to store new rules.&lt;br /&gt;&lt;br /&gt;Select the &lt;i&gt;View Rules&lt;/i&gt; button to view, edit, delete, enable, or disable rules that have already been created.</string>
    <string name="help_filtersandactions">Add filters to an event to limit when this rule is triggered.  Add actions you would like performed when this rule is triggered.</string>
    <string name="help_saved_rules">Use this screen to enable and disable the rules that are saved.</string>
    <string name="help_dlgattributes">Creating filters allows you to match when the event will be acted on.&lt;br /&gt;&lt;br /&gt;Events have different attribute types that can be filtered.&lt;br /&gt;Select the type of attribute you would like to match.</string>
    <string name="help_dlgfilters">Creating filters allows you to match when the event will be acted on.&lt;br /&gt;&lt;br /&gt;Select the filter that you want to apply from the list of filter types.</string>
    <string name="help_dlgfilterinput">Creating filters allows you to match when the event will be acted on.&lt;br /&gt;&lt;br /&gt;Input entered here will be passed to the filter.&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;This rule will only be activated if it matches the data provided by this filter.</string>
    <string name="help_dlgapplications">Select the application that will provide the resultant action for this rule.</string>
    <string name="help_dlgactions">Applications can perform certain actions.  Select the action that you want this application to perform as a result of the root event.</string>
    <string name="help_dlgactioninput">Input entered here will be passed to the action you are creating.  If attributes from the event that triggered this application are compatible with the inputs here, you can select the attribute by clicking on the attributes button.</string>
    <string name="help_dlgapplicationlogininput"></string>
    <string name="action_default_message">message</string>
    <string name="choose_root_event_title">Choose a root event</string>
    <string name="addfilters_and_actions_title">Add filters and actions to your rule</string>
    <string name="attributes_title">Attributes</string>
    <string name="filters_title">Filters</string>
    <string name="filter_input_title">Filter Input</string>
    <string name="applications_title">Applications</string>
    <string name="show_website_title">Show Website</string>
    <string name="rule_name_title">Rule Name</string>
    <string name="saved_rules_title">Enable Saved Rules</string>
    <string name="login_title">Login</string>
    <string name="actions_title">Actions</string>
    <string name="action_input_title">Action Input</string>
    <string name="logs">Logs</string>
    <string name="about_title">About LibreTasks</string>
    <string name="about_desc">LibreTasks is an Automated Event Handler.</string>
    <string name="about_version">Version:</string>
    <string name="about_license">License: GPL v3 forked from Apache 2.0</string>
    <string name="about_website">Website: https://github.com/biotinker/LibreTasks</string>
    <string name="copyright">&#169; 2016 LibreTasks.  All rights reserved.</string>
    <string name="choose_root_event_inst">Pick a root event from the list below to start building your rule:</string>
    <string name="choose_filters_actions_inst">Select an item from the list below, then add filters or actions:</string>
    <string name="select_application_title">Select an application:</string>
    <string name="select_action_title">Select an action of [%1$s] to use:</string>
    <string name="select_attribute_title">Select an attribute for [%1$s] to filter on:</string>
    <string name="select_filter_title">Select a filter to apply to [%1$s]:</string>
    <string name="select_rule_toggle_inst">Please select a rule from the list to turn on/off.</string>
    <string name="select_control_for_param_alert_inst">Please select a control to use parameters.</string>
    <string name="phone_num_eq_filter_inst">Enter a phone number to match below:</string>
    <string name="phone_num_not_eq_filter_inst">Enter the phone number to exclude from the filter </string>
    <string name="num_eq_filter_inst">Enter a number to match:</string>
    <string name="num_not_eq_filter_inst">Enter a number to exclude:</string>
    <string name="num_lessthan_filter_inst">Enter a number to match less than:</string>
    <string name="throttle">Throttle</string>
    <string name="throttle_description">Limit number of events to process per minute</string>
    <string name="log_limit">Log Limit</string>
    <string name="log_limit_description">Limit the length of time to keep logs</string>
    <string name="sound_enabled">Sound Notifications</string>
    <string name="light_enabled">LED Notifications</string>
    <string name="vibrate_enabled">Vibrate Notifications</string>
    <string name="disable_libretasks">Disable LibreTasks</string>
    <string name="disable_libretasks_desc">LibreTasks is currently enabled</string>
    <string name="sound_desc">Allow LibreTasks to alert using sound</string>
    <string name="light_desc">Allow LibreTasks to alert using lights</string>
    <string name="vibrate_desc">Allow LibreTasks to alert using vibration</string>
    <string name="notification_desc"></string>
    <string name="notification">Notifications</string>
    <string name="default_notification_desc">Set notifications on by default</string>
    <string name="default_notification">Notifications</string>
    <string name="reset_db_desc">Resetting database will clear all user data</string>
    <string name="reset_db">Reset Database</string>
    <string name="reset_settings_desc">Reset preferences to default values</string>
    <string name="reset_settings">Reset Preferences</string>
    <string name="gmail_signature_title">Gmail Signature</string>
    <string name="gmail_signature_dialog_message">Enter Gmail signature below</string>
    <string name="sms_signature_title">SMS Signature</string>
    <string name="sms_signature_desc_off">Turn off sms signature</string>
    <string name="gmail_signature_desc_off">Turn off Gmail signature</string>
    <string name="sms_signature_dialog_message">Enter sms signature below </string>
    <string name="sms_signature">\n(LibreTasks)</string>
    <string name="gmail_signature">\n\nSent by LibreTasks</string>
    <string name="signature_settings">Signature settings</string>
    <string name="signature_desc">Modify Gmail and Sms Signatures</string>
    <string name="gmail_signature_settings_title">Gmail signature settings</string>
    <string name="sms_signature_settings_title">SMS signature settings</string>
    <string name="gmail_signature_settings_desc">Modify Gmail signature</string>
    <string name="sms_signature_settings_desc">Modify SMS signature</string>
    <string name="pref_key_sound">SoundKey</string>
    <string name="pref_key_light">LightKey</string>
    <string name="pref_key_vibrate">VibrateKey</string>
    <string name="pref_key_libretasks_enabled">LibreTasksEnabled</string>
    <string name="pref_key_notification">NotificationKey</string>
    <string name="pref_key_throttle">Throttle</string>
    <string name="pref_key_log_limit">LogLimit</string>
    <string name="pref_key_reset_db">ResetDb</string>
    <string name="pref_key_reset_settings">ResetSettings</string>
    <string name="pref_key_gmail_signature">GmailSignature</string>
    <string name="pref_key_gmail_signature_settings">GmailSignatureSetitngs</string>
    <string name="pref_key_sms_signature">SMSSignature</string>
    <string name="pref_key_sms_signature_settings">SMSSignatureSettings</string>
</resources>