<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_dlg_rule_name_ll_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="300dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activity_dlg_rule_name_tv_info_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp"
            android:text="@string/enter_rule_name" />

        <EditText
            android:id="@+id/activity_dlg_rule_name_et_rule_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/activity_dlg_rule_name_tv_info_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="0dp"
            android:text="@string/enter_rule_description" />

        <EditText
            android:id="@+id/activity_dlg_rule_name_et_rule_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/activity_dlg_rule_name_btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="80dp"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>