<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_dlg_action_input_ll_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="300dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/activity_dlg_action_input_llDynamicContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <!-- ************************************************************** -->
            <!--
                 UI content added programmatically at runtime to this linear layout 
                 based on the ModelAction type being created. The actual creation
                 of the UI elements is handled inside:
                 
                     FactoryDynamicUI.buildUIForAction()
            -->
            <!-- ************************************************************** -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/activity_dlg_action_input_btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ok" >
            </Button>

            <Button
                android:id="@+id/activity_dlg_action_input_btnAttributes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/event_attributes" >
            </Button>

            <Button
                android:id="@+id/activity_dlg_action_input_btnHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>